--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chat-backend",
+  "name": "simple-ai-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.4.1"
   }
 }
