--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gemini-backend",
+  "name": "gemini-ai-app",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,7 +9,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^2.6.7"
+    "dotenv": "^16.3.1"
   }
 }
