--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "gemini-ai-app",
+  "name": "ai-backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
