--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "express": "^4.18.2"
   }
 }
